fixed maps url  alignment

--- a/src/index.css
+++ b/src/index.css
@@ -55,10 +55,8 @@ nav {
   font-weight: 400;
   font-size: 10.24px;
   line-height: 12px;
-  /* identical to box height */
-
+  align-self: center;
   text-decoration-line: underline;
-
   color: #918E9B;
 }
 
